test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/and_void.plx
#  void expressions are non-scalar, so they can't be used in logical expressions

pub fn main(none) i32 {
    return cast<none>(1) and 2
}
